--- a/.github/workflows/deploy-azure-resources.yml
+++ b/.github/workflows/deploy-azure-resources.yml
@@ -27,6 +27,31 @@ env:
   CUSTOM_DOMAIN: "loganfarci.com"
 
 jobs:
+  secrets:
+    name: Read secrets from Azure Key Vault
+    runs-on: ubuntu-latest
+    environment: Production
+    outputs:
+      storage_account_name: ${{ steps.get-secrets.outputs.terraform_backend_storage_account }}
+      container_name: ${{ steps.get-secrets.outputs.terraform_backend_container_name }}
+      resource_group: ${{ steps.get-secrets.outputs.terraform_backend_resource_group }}
+      access_key: ${{ steps.get-secrets.outputs.terraform_backend_storage_account_key }}
+    steps:
+      - name: Azure CLI Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Get secrets from Key Vault
+        id: get-secrets
+        run: |
+          echo "terraform_backend_resource_group=$(az keyvault secret show --name TerraformBackendResourceGroup --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --query value -o tsv)" >> $GITHUB_OUTPUT
+          echo "terraform_backend_storage_account=$(az keyvault secret show --name TerraformBackendStorageAccountName --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --query value -o tsv)" >> $GITHUB_OUTPUT
+          echo "terraform_backend_storage_account_key=$(az keyvault secret show --name TerraformBackendStorageAccountKey --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --query value -o tsv)" >> $GITHUB_OUTPUT
+          echo "terraform_backend_container_name=$(az keyvault secret show --name TerraformBackendContainerName --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --query value -o tsv)" >> $GITHUB_OUTPUT
+
   terraform:
     name: "Deploy Terraform module"
     runs-on: ubuntu-latest
@@ -36,6 +61,7 @@ jobs:
     defaults:
       run:
         working-directory: infra
+    needs: secrets
     outputs:
       resource_group_name: ${{ steps.output.outputs.resource_group_name }}
       static_web_app_name: ${{ steps.output.outputs.static_web_app_name }}
@@ -51,24 +77,24 @@ jobs:
       - name: Azure CLI Login
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.ARM_CLIENT_ID }}
-          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
         run: |
           terraform init \
-            -backend-config="storage_account_name=${{ secrets.STORAGE_ACCOUNT_NAME }}" \
-            -backend-config="container_name=${{ secrets.CONTAINER_NAME }}" \
-            -backend-config="key=${{ secrets.BLOB_NAME }}" \
-            -backend-config="access_key=${{ secrets.ACCESS_KEY }}"
+            -backend-config="storage_account_name=${{ needs.secrets.outputs.storage_account_name }}" \
+            -backend-config="container_name=${{ needs.secrets.outputs.container_name }}" \
+            -backend-config="key=state" \
+            -backend-config="access_key=${{ needs.secrets.outputs.access_key }}"
 
       - name: Terraform Plan
         if: ${{ env.IS_DEPLOY == 'true' }}
         id: plan
         run: |
           terraform plan \
-            -var="subscription_id=${{ secrets.SUBSCRIPTION_ID }}" \
+            -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
             -var="workload_name=lfarci" \
             -out=tfplan
 
@@ -77,7 +103,7 @@ jobs:
         id: destroy
         run: |
           terraform plan \
-            -var="subscription_id=${{ secrets.SUBSCRIPTION_ID }}" \
+            -var="subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
             -var="workload_name=lfarci" \
             -out=tfplan \
             -destroy
@@ -128,9 +154,9 @@ jobs:
       - name: Azure CLI Login
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.ARM_CLIENT_ID }}
-          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Configure custom domain
         run: .github/scripts/set_custom_domain.sh
