--- a/.github/workflows/azure-resources.yml
+++ b/.github/workflows/azure-resources.yml
@@ -141,7 +141,7 @@ jobs:
           done
 
   environment:
-    name: "Set secrets in environment"
+    name: "Set secrets in the Key Vaultr"
     if: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'Deploy') }}
     runs-on: ubuntu-latest
     environment: Production
@@ -154,12 +154,19 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: Get deployment token
+        id: get-token
+        run: |
+          deployment_token=$(az staticwebapp deployment token --name "${{ needs.terraform.outputs.static_web_app_name }}" --resource-group "${{ needs.terraform.outputs.resource_group_name }}" --query "deployment_token" -o tsv)
+          echo "deployment_token=$deployment_token" >> $GITHUB_OUTPUT
+
       - name: Set secrets in environment
         run: |
           az keyvault secret set --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --name "ResourceGroupName" --value "${{ needs.terraform.outputs.resource_group_name }}"
           az keyvault secret set --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --name "StaticWebAppName" --value "${{ needs.terraform.outputs.static_web_app_name }}"
           az keyvault secret set --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --name "StaticWebAppDefaultHostName" --value "${{ needs.terraform.outputs.static_web_app_host_name }}"
           az keyvault secret set --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --name "StaticWebAppCustomHostName" --value "${{ env.SUBDOMAIN }}.${{ env.CUSTOM_DOMAIN }}"
+          az keyvault secret set --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --name "StaticWebAppDeploymentKey" --value "${{ steps.get-token.outputs.deployment_token }}"
 
   custom_domain:
     name: "Configure custom domain"
