--- a/.github/workflows/next-app.yml
+++ b/.github/workflows/next-app.yml
@@ -40,6 +40,18 @@ jobs:
       - name: Build application
         run: npm run build
 
+      - name: Azure CLI Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Get secrets from Key Vault
+        id: get-secrets
+        run: |
+          echo "deployment_token=$(az keyvault secret show --name StaticWebAppDeploymentKey --vault-name ${{ secrets.AZURE_KEY_VAULT_NAME }} --query value -o tsv)" >> $GITHUB_OUTPUT
+
       - name: Deploy to Azure Static Web Apps
         run: |
-          npx swa deploy ./out --deployment-token ${{ secrets.AZURE_STATIC_DEPLOYMENT_TOKEN }}
+          npx swa deploy ./out --deployment-token ${{ steps.get-secrets.outputs.deployment_token }}
