--- a/.github/workflows/next-app.yml
+++ b/.github/workflows/next-app.yml
@@ -55,4 +55,4 @@ jobs:
 
       - name: Deploy to Azure Static Web Apps
         run: |
-          npx swa deploy ./out --deployment-token ${{ steps.get-secrets.outputs.deployment_token }}
+          npx swa deploy ./out --deployment-token ${{ steps.get-secrets.outputs.deployment_token }} --env production
