fix: set default working directory for deployment job in Azure workflow

--- a/.github/workflows/next-app.yml
+++ b/.github/workflows/next-app.yml
@@ -22,6 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: Production
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}/src
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
