fix: update output directory path for deployment in Azure workflow

--- a/.github/workflows/next-app.yml
+++ b/.github/workflows/next-app.yml
@@ -14,7 +14,7 @@ permissions:
 
 env:
   src_directory: ${{ github.workspace }}/src
-  out_directory: ${{ github.workspace }}/out
+  out_directory: ${{ github.workspace }}/src/out
 
 jobs:
   deploy:
