--- a/.github/workflows/next-app.yml
+++ b/.github/workflows/next-app.yml
@@ -47,6 +47,9 @@ jobs:
 
       - name: Build application
         run: npm run build
+        env:
+          NEXT_PUBLIC_GITHUB_REPOSITORY_URL: "${{ github.server_url }}/${{ github.repository }}"
+          NEXT_PUBLIC_COMMIT_HASH: "${{ github.sha }}"
 
       - name: Azure CLI Login
         uses: azure/login@v2
