--- a/src/package.json
+++ b/src/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^12.7.3",
     "next": "^15.2.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@azure/static-web-apps-cli": "^2.0.5",
