--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroui/react": "^2.7.6",
     "framer-motion": "^12.7.3",
+    "gray-matter": "^4.0.3",
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
