feat: Update Prettier configuration with printWidth and pragma options

--- a/src/.prettierrc
+++ b/src/.prettierrc
@@ -14,5 +14,8 @@
     "htmlWhitespaceSensitivity": "css",
     "endOfLine": "lf",
     "embeddedLanguageFormatting": "auto",
-    "singleAttributePerLine": false
+    "singleAttributePerLine": false,
+    "printWidth": 120,
+    "requirePragma": false,
+    "insertPragma": false
 }
