--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,15 +1,15 @@
 {
     "name": "Personal website development environment",
     "image": "mcr.microsoft.com/devcontainers/typescript-node:22",
-    "forwardPorts": [3000],
+    "forwardPorts": [
+        3000
+    ],
     "workspaceFolder": "/workspaces/loganfarci.com/src",
-
     "features": {
         "ghcr.io/devcontainers/features/azure-cli:1": {},
         "ghcr.io/devcontainers/features/terraform:1": {},
         "ghcr.io/devcontainers/features/github-cli:1": {}
     },
-
     "customizations": {
         "vscode": {
             "settings": {
@@ -19,12 +19,17 @@
                 "github.copilot",
                 "github.copilot-chat",
                 "github.vscode-pull-request-github",
-
+                "GitHub.vscode-github-actions",
                 "hashicorp.terraform",
+                "ms-vscode.azurecli",
+                "ms-vscode.vscode-node-azure-pack",
+                "ms-azuretools.vscode-azureresourcegroups",
                 "ms-azuretools.vscode-azurestaticwebapps",
-
+                "ms-azuretools.vscode-azureterraform",
+                "ms-azuretools.vscode-azure-github-copilot",
                 "esbenp.prettier-vscode",
-                "dbaeumer.vscode-eslint"
+                "dbaeumer.vscode-eslint",
+                "bradlc.vscode-tailwindcss"
             ]
         }
     }
