--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -4,7 +4,7 @@
     "forwardPorts": [
         3000
     ],
-    "workspaceFolder": "/workspaces/loganfarci.com/src",
+    "workspaceFolder": "/workspaces/loganfarci.com",
     "features": {
         "ghcr.io/devcontainers/features/azure-cli:1": {},
         "ghcr.io/devcontainers/features/terraform:1": {},
