fix: Add missing DATA_DIRECTORY environment variable in deployment workflow

--- a/.github/workflows/next-app.yml
+++ b/.github/workflows/next-app.yml
@@ -16,6 +16,7 @@ env:
   src_directory: ${{ github.workspace }}/src
   out_directory: ${{ github.workspace }}/src/out
   articles_directory: ${{ github.workspace }}/content/articles
+  data_directory: ${{ github.workspace }}/content/data
 
 jobs:
   deploy:
@@ -50,6 +51,7 @@ jobs:
         run: npm run build
         env:
           ARTICLES_DIRECTORY: "${{ env.articles_directory }}"
+          DATA_DIRECTORY: "${{ env.data_directory }}"
           NEXT_PUBLIC_GITHUB_REPOSITORY_URL: "${{ github.server_url }}/${{ github.repository }}"
           NEXT_PUBLIC_COMMIT_HASH: "${{ github.sha }}"
 
