--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
         "@heroui/react": "^2.7.6",
         "framer-motion": "^12.7.3",
         "gray-matter": "^4.0.3",
+        "mermaid": "^11.9.0",
         "next": "^15.2.4",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
