--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,8 @@
         "next": "^15.4.5",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
-        "react-markdown": "^10.1.0"
+        "react-markdown": "^10.1.0",
+        "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
         "@azure/static-web-apps-cli": "^2.0.6",
