--- a/src/package.json
+++ b/src/package.json
@@ -2,6 +2,7 @@
     "name": "loganfarci.com",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev --turbopack",
         "build": "next build",
@@ -22,6 +23,7 @@
     "devDependencies": {
         "@azure/static-web-apps-cli": "^2.0.6",
         "@eslint/eslintrc": "^3.3.1",
+        "@tailwindcss/postcss": "^4.1.12",
         "@types/node": "^20.19.9",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
@@ -30,7 +32,7 @@
         "eslint-config-prettier": "^10.1.8",
         "postcss": "^8.5.6",
         "prettier": "3.6.2",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.12",
         "typescript": "^5.8.3"
     }
 }
