--- a/vite/package.json
+++ b/vite/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/manrope": "^5.2.8",
+    "@fontsource/noto-sans": "^5.2.10",
+    "@fontsource/reddit-mono": "^5.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
