feat: Refactor layout and add new components
- Updated Layout component to use Providers and LayoutWrapper for better structure.
- Introduced Footer component with GitHub repository link and commit hash display.
- Added LayoutWrapper component to encapsulate NavigationBar and Footer.
- Created NavBarEntry component for navigation links.
- Implemented NavigationBar with responsive design and theme toggle.
- Added NewTabLink component for external links.
- Integrated ThemeProvider for theme management.
- Created various typography components (Headings, Text, Lists) with styles.
- Added icons for UI elements (e.g., MoonIcon, SunIcon, GitHubIcon).
- Updated tsconfig and vite.config for path aliases and module resolution.
- Included framer-motion for animations and @heroui/react for UI components.

--- a/vite/package.json
+++ b/vite/package.json
@@ -13,7 +13,9 @@
     "@fontsource/manrope": "^5.2.8",
     "@fontsource/noto-sans": "^5.2.10",
     "@fontsource/reddit-mono": "^5.2.8",
+    "@heroui/react": "^2.8.5",
     "@tailwindcss/vite": "^4.1.17",
+    "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
@@ -21,10 +23,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.22",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
