--- a/src/package.json
+++ b/src/package.json
@@ -7,14 +7,14 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "eslint . --ext .ts,.tsx"
     },
     "dependencies": {
         "@heroui/react": "^2.8.2",
         "framer-motion": "^12.23.11",
         "gray-matter": "^4.0.3",
         "mermaid": "^11.9.0",
-        "next": "^15.4.5",
+        "next": "^16.0.3",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-markdown": "^10.1.0",
@@ -28,11 +28,12 @@
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
         "eslint": "^9.32.0",
-        "eslint-config-next": "15.1.7",
+        "eslint-config-next": "16.0.3",
         "eslint-config-prettier": "^10.1.8",
         "postcss": "^8.5.6",
         "prettier": "3.6.2",
         "tailwindcss": "^4.1.12",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.47.0"
     }
 }
