fix: update navigation fallback to rewrite to 404.html instead of index.html

--- a/src/public/staticwebapp.config.json
+++ b/src/public/staticwebapp.config.json
@@ -1,6 +1,6 @@
 {
   "navigationFallback": {
-    "rewrite": "/index.html",
+    "rewrite": "/404.html",
     "exclude": [
       "/images/*.{png,jpg,gif,svg,ico,webp}",
       "/_next/*",
