--- a/src/package.json
+++ b/src/package.json
@@ -15,7 +15,7 @@
         "mermaid": "^11.9.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
-        "react-helmet-async": "^2.0.0",
+        "react-helmet-async": "^2.0.5",
         "react-markdown": "^10.1.0",
         "react-router": "^7.12.0",
         "remark-gfm": "^4.0.1"
@@ -26,17 +26,18 @@
         "@fontsource-variable/manrope": "*",
         "@fontsource/noto-sans": "*",
         "@fontsource/reddit-mono": "*",
-        "@tailwindcss/postcss": "^4.1.12",
+        "@tailwindcss/postcss": "^4.2.1",
         "@types/node": "^20.19.9",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
         "@vitejs/plugin-react": "^4.0.0",
+        "baseline-browser-mapping": "^2.10.0",
         "eslint": "^9.32.0",
         "eslint-config-prettier": "^10.1.8",
         "gray-matter": "^4.0.3",
         "postcss": "^8.5.6",
         "prettier": "3.6.2",
-        "tailwindcss": "^4.1.12",
+        "tailwindcss": "^4.2.1",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.47.0",
         "vite": "^6.0.0"
