--- a/src/package.json
+++ b/src/package.json
@@ -26,7 +26,7 @@
         "@fontsource-variable/manrope": "*",
         "@fontsource/noto-sans": "*",
         "@fontsource/reddit-mono": "*",
-        "@tailwindcss/postcss": "^4.2.1",
+        "@tailwindcss/vite": "^4.2.1",
         "@types/node": "^20.19.9",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
@@ -35,7 +35,6 @@
         "eslint": "^9.32.0",
         "eslint-config-prettier": "^10.1.8",
         "gray-matter": "^4.0.3",
-        "postcss": "^8.5.6",
         "prettier": "3.6.2",
         "tailwindcss": "^4.2.1",
         "typescript": "^5.8.3",
